Minor revision to params.ini, internalized m/H_*, disabled do_nonlinear

--- a/params.ini
+++ b/params.ini
@@ -44,7 +44,7 @@ w = -1
 cs2_lam = 1
 
 #Axion variables
-#Axion fraction - fraction of DM when m/H0 >= 10, of DE when m/H < 10 
+#Option to use axion fraction
 use_axfrac = T
 #now we will ignore omaxh2 if use_axfrac=T
 axion_isocurvature = F
@@ -55,10 +55,10 @@ Hinf = 13.7 #Log Hinflation  in GeV
 # Mass is in units eV
 omaxh2 = 15.0
 m_ax = 3.e-27
-movH_switch = 10.0
 
 # if use_axfrac = T set parameters as here, ignored if use_axfrac=F
 omdah2 = 1.20e-01
+# The axion fraction, which is a fraction of DM when m/H0 >= 10, of DE when m/H < 10 
 axfrac = 1.0000
 
 #if use_physical = F set parameters as here
