--- a/params.ini
+++ b/params.ini
@@ -33,7 +33,7 @@ k_eta_max_tensor = 3000
 # If use_phyical set physical densities in baryons, CDM and neutrinos + Omega_k
 use_physical = T
 ombh2 = 0.0224 #Planck
-omch2 = 1.20e-01
+omch2 = 0.1200
 omnuh2 = 0.0006 #Planck
 omk = 0.0
 hubble = 67.36
@@ -53,11 +53,11 @@ Hinf = 13.7 #Log Hinflation  in GeV
 
 #Axion variables
 # Mass is in units eV
-omaxh2 = 15.0
+omaxh2 = 0.1200
 m_ax = 1.e-27
 
 # if use_axfrac = T set parameters as here, ignored if use_axfrac=F
-omdah2 = 1.20e-01
+omdah2 = 0.1200
 # The axion fraction, which is a fraction of DM when m/H0 >= 10, of DE when m/H < 10 
 axfrac = 1.0000
 
