--- a/params.ini
+++ b/params.ini
@@ -32,9 +32,9 @@ k_eta_max_tensor = 3000
 #Main cosmological parameters, neutrino masses are assumed degenerate
 # If use_phyical set physical densities in baryons, CDM and neutrinos + Omega_k
 use_physical = T
-ombh2 = 0.0224 #Planck
+ombh2 = 0.0224 
 omch2 = 0.1200
-omnuh2 = 0.0006 #Planck
+omnuh2 = 0.0006 
 omk = 0.0
 hubble = 67.36
 
@@ -44,22 +44,22 @@ w = -1
 cs2_lam = 1
 
 #Axion variables
-#Option to use axion fraction
+
+# Mass is in units eV
+m_ax = 1.e-27
+# Option to use axion fraction, ignore omaxh2 if set as T
 use_axfrac = T
-#now we will ignore omaxh2 if use_axfrac=T
+# If use_axfrac = F, set axion abundance with omaxh2
+omaxh2 = 0.1200
+# If use_axfrac = T, set axion abundance with omdah2 (total DM abundance) and axfrac, ignored if use_axfrac=F
+omdah2 = 0.1200
+# The axion fraction is a fraction of DM when m/H0 >= 10, of DE when m/H < 10. In the DE case, omch2 will be set as omdah2
+axfrac = 1.0000
+
 axion_isocurvature = F
 alpha_ax = 0
 Hinf = 13.7 #Log Hinflation  in GeV
 
-#Axion variables
-# Mass is in units eV
-omaxh2 = 0.1200
-m_ax = 1.e-27
-
-# if use_axfrac = T set parameters as here, ignored if use_axfrac=F
-omdah2 = 0.1200
-# The axion fraction, which is a fraction of DM when m/H0 >= 10, of DE when m/H < 10 
-axfrac = 1.0000
 
 #if use_physical = F set parameters as here
 #omega_baryon = 0.0462
@@ -227,7 +227,7 @@ number_of_threads      = 0
 #Try accuracy_boost=2, l_accuracy_boost=2 if you want to check stability/even higher accuracy
 #Note increasing accuracy_boost parameters is very inefficient if you want higher accuracy,
 #but high_accuracy_default is efficient
-#At this pint high_accuracy_default = T is always turned on
+#high_accuracy_default = T is always turned on in current and future versions
 
 high_accuracy_default = T
 
