--- a/params.ini
+++ b/params.ini
@@ -5,7 +5,7 @@ output_root = test
 
 #What to do
 get_scalar_cls = T
-get_vector_cls = T
+get_vector_cls = F
 get_tensor_cls = F
 get_transfer   = T
 
