--- a/params.ini
+++ b/params.ini
@@ -1,7 +1,7 @@
 #Parameters for CAMB
 
 #output_root is prefixed to output file names
-output_root = test1
+output_root = test
 
 #What to do
 get_scalar_cls = T
