--- a/params.ini
+++ b/params.ini
@@ -9,6 +9,8 @@ get_vector_cls = F
 get_tensor_cls = F
 get_transfer   = T
 
+
+deriv_output_file=deriv_params
 #if do_lensing then scalar_output_file contains additional columns of l^4 C_l^{pp} and l^3 C_l^{pT}
 #where p is the projected potential. Output lensed CMB Cls (without tensors) are in lensed_output_file below.
 do_lensing = T
