--- a/params.ini
+++ b/params.ini
@@ -154,12 +154,17 @@ transfer_kmax = 5
 
 transfer_k_per_logint = 8
 
-transfer_num_redshifts = 1
+transfer_num_redshifts = 2
 transfer_interp_matterpower = T
-transfer_redshift(1)    = 0
-transfer_filename(1)    = transfer_out.dat
+transfer_redshift(1)    = 0.5
+transfer_filename(1)    = transfer_out_z1.dat
 #Matter power spectrum output against k/h in units of h^{-3} Mpc^3
-transfer_matterpower(1) = matterpower.dat
+transfer_matterpower(1) = matterpower_z1.dat
+
+transfer_redshift(2)    = 0
+transfer_filename(2)    = transfer_out_z2.dat
+#Matter power spectrum output against k/h in units of h^{-3} Mpc^3
+transfer_matterpower(2) = matterpower_z2.dat
 
 #Output files not produced if blank. make camb_fits to use use the FITS setting.
 scalar_output_file = scalCls.dat
