--- a/params.ini
+++ b/params.ini
@@ -35,7 +35,7 @@ k_eta_max_tensor = 3000
 # If use_phyical set physical densities in baryons, CDM and neutrinos + Omega_k
 use_physical = T
 ombh2 = 0.0224 
-omch2 = 0.1200
+omch2 = 0.120
 omnuh2 = 0.0006 
 omk = 0.0
 hubble = 67.36
@@ -48,7 +48,7 @@ cs2_lam = 1
 #Axion variables
 
 # Mass is in units eV
-m_ax = 1.e-27
+m_ax = 1.e-22
 # Option to use axion fraction, ignore omaxh2 if set as T
 use_axfrac = T
 # If use_axfrac = F, set axion abundance with omaxh2
@@ -56,7 +56,7 @@ omaxh2 = 0.1200
 # If use_axfrac = T, set axion abundance with omdah2 (total DM abundance) and axfrac, ignored if use_axfrac=F
 omdah2 = 0.1200
 # The axion fraction is a fraction of DM when m/H0 >= 10, of DE when m/H < 10. In the DE case, omch2 will be set as omdah2
-axfrac = 1.0000
+axfrac = 1.00
 
 axion_isocurvature = F
 alpha_ax = 0
@@ -94,8 +94,8 @@ nu_mass_fractions = 1
 initial_power_num         = 1
 pivot_scalar              = 0.05
 pivot_tensor              = 0.05
-scalar_amp(1)             = 2.196e-9
-scalar_spectral_index(1)  = 0.9655
+scalar_amp(1)             = 2.10e-9
+scalar_spectral_index(1)  = 0.9665
 scalar_nrun(1)            = 0
 tensor_spectral_index(1)  = 0
 #ratio is that of the initial tens/scal power spectrum amplitudes
@@ -161,10 +161,10 @@ transfer_filename(1)    = transfer_out.dat
 #Matter power spectrum output against k/h in units of h^{-3} Mpc^3
 transfer_matterpower(1) = matterpower_z1.dat
 
-#transfer_redshift(2)    = 0
-#transfer_filename(2)    = transfer_out_z2.dat
+transfer_redshift(2)    = 0.0
+transfer_filename(2)    = transfer_out_z2.dat
 #Matter power spectrum output against k/h in units of h^{-3} Mpc^3
-#transfer_matterpower(2) = matterpower_z2.dat
+transfer_matterpower(2) = matterpower_z2.dat
 
 #Output files not produced if blank. make camb_fits to use use the FITS setting.
 scalar_output_file = scalCls.dat
